--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#post">Post</a>
+                        <a href="/side/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#about">About</a>
+                        <a href="../index.html#post">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -32,11 +32,11 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#skill">Skills</a>
+                        <a href="/side/about.html#project">Project</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#contact">Contact</a>
+                        <a href="/side/about.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
         </div>
         <!-- End Home -->
 
-        <!-- Post -->
+        <!-- Category -->
         <br><br><br>
         <section id="post" name="post">
             <div class="container">
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </section>
-        <!-- End Post -->
+        <!-- End Category -->
 
         <!-- Latest Post -->
         <br><br><br>
@@ -140,11 +140,11 @@
                     </div>
                     <div
                         class="col-4"><!-- <div class="images-container">
-                                                                                                                                                                                                                                                            <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
-                                                                                                                                                                                                                                                            <div class="images-text">
-                                                                                                                                                                                                                                                                <p class="fw-bold">IOS Pentest</p>
-                                                                                                                                                                                                                                                            </div>
-                                                                                                                                                                                                                                                        </div> -->
+                                                                                                                                                                                                                                                                                                                                                                                                                                    <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                                                                                                                                                                                                                                                                                                                                                                                                                                    <div class="images-text">
+                                                                                                                                                                                                                                                                                                                                                                                                                                        <p class="fw-bold">IOS Pentest</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                </div> -->
                     </div>
                 </div>
             </div>
@@ -154,26 +154,26 @@
         <!-- About -->
         <br><br><br><br><br>
         <!-- <section id="about" name="about" style="background-color: #212529;">
-                                                    <div class="container">
-                                                        <div class="row">
-                                                            <div class="col text-center">
-                                                                <h1>About Me</h1>
-                                                            </div>
-                                                        </div>
-                                                        <br><br>
-                                                        <div class="row">
-                                                            <div class="col-2"></div>
-                                                            <div class="col-4 text-center">
-                                                                <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
-                                                            </div>
-                                                            <div class="col-4">
-                                                                <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
-                                                            </div>
-                                                            <div class="col-2"></div>
-                                                        </div>
-                                                    </div>
-                                                </section>
-                                                <br><br><br><br><br> -->
+                                                                                                    <div class="container">
+                                                                                                        <div class="row">
+                                                                                                            <div class="col text-center">
+                                                                                                                <h1>About Me</h1>
+                                                                                                            </div>
+                                                                                                        </div>
+                                                                                                        <br><br>
+                                                                                                        <div class="row">
+                                                                                                            <div class="col-2"></div>
+                                                                                                            <div class="col-4 text-center">
+                                                                                                                <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
+                                                                                                            </div>
+                                                                                                            <div class="col-4">
+                                                                                                                <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
+                                                                                                            </div>
+                                                                                                            <div class="col-2"></div>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </section>
+                                                                                                <br><br><br><br><br> -->
         <!-- End About -->
 
         <!-- Footer -->
