--- a/blue/blue.html
+++ b/blue/blue.html
@@ -20,11 +20,11 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#post">Post</a>
+                        <a href="/side/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#about">About</a>
+                        <a href="../index.html#post">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -32,11 +32,11 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#skill">Skills</a>
+                        <a href="/side/about.html#project">Project</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#contact">Contact</a>
+                        <a href="/side/about.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -64,9 +64,9 @@
                     <div class="col-4">
                         <div
                             class="images-container"><!-- <a href="/ctf/simplectf.html"><img src="/assets/Jurnals/Hnet.com-image.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                                                                                                                                                                                                                            <div class="images-text">
-                                                                                                                                                                                                                                                                <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                                                                                                                                                                                                                            </div> -->
+                                                                                                                                                                                                                                                                                                                            <div class="images-text">
+                                                                                                                                                                                                                                                                                                                                <p class="fw-bold">Simple CTF | TryHackMe</p>
+                                                                                                                                                                                                                                                                                                                            </div> -->
                         </div>
                     </div>
                 </div>
