--- a/side/about.html
+++ b/side/about.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="../java.js">
-        <title>Marmut Handsome</title>
+        <title>About</title>
         <style>
             .navbar {
                 background-color: transparent;
@@ -43,39 +42,91 @@
         </nav>
         <!-- End Navbar -->
 
-        <!-- Title -->
-        <br><br><br><br><br><br><br><br><br><br>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1 class="fw-bold text-center">IOS Pentesting</h1>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End Title -->
-
-        <!-- Post -->
-        <br><br><br><br><br>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="images-container">
-                            <a href="../ios/frida.html"><img src="/assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
-                            </div>
+        <!-- Home -->
+        <div id="Home" name="Home">
+            <div class="image-container">
+                <img src="../assets/Jurnals/About.jpeg" alt="Image" width="2000">
+                <div class="image-text">
+                    <div class="row">
+                        <div class="col-2"></div>
+                        <div class="col-8">
+                            <h1 class="fw-bold text-center">About</h1>
                         </div>
+                        <div class="col-2"></div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- End Post -->
+        </div>
+        <!-- End Home -->
+
+        <!-- Content -->
+        <br><br><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <p>
+                        Hi
+                        <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" alt="asd" width="25px">
+                        I'm Ferry Nurqadar.
+                    </p>
+                    <br>
+                    <p>
+                        I am a Web Pentester, IOS Pentester, Bug Hunter, Red Team and Web Developer (Front-End).
+                    </p>
+                    <br>
+                    <p>
+                        I am a Cyber Security student at Bina Nusantara University with a strong passion for the cyber world. My expertise lies in Offensive Security, Pentester, Cyber Defense, Digital Forensics, Kali Linux, and various Programming Languages. I am constantly seeking opportunities to enhance my knowledge and skills in these areas. My goal is to contribute to the field of cybersecurity and make a positive impact in protecting digital assets and ensuring online safety.
+                    </p>
+                    <br>
+                    <p>
+                        If you have any other questions please feel free to contact me
+                        <a href="https://id.linkedin.com/in/ferry-nurqadar-237646172">@ferry</a>.
+                    </p>
+                    <blockquote class="quote">
+                        <footer>
+                            <cite class="pe-3">
+                                Job:
+                            </cite>
+                            <cite>
+                                🗡 Pentester and 🔴 Red Team.
+                            </cite>
+                            <br>
+                            <cite class="pe-3">
+                                Pronouns:
+                            </cite>
+                            <cite>
+                                👨 He/Him.
+                            </cite>
+                            <br>
+                            <cite class="pe-3">
+                                Special Move:
+                            </cite>
+                            <cite>
+                                💻 Web Hacking and 📱 IOS Hacking.
+                            </cite>
+                            <br>
+                            <cite class="pe-3">
+                                Language:
+                            </cite>
+                            <cite>
+                                Shell Scripting and HTML.
+                            </cite>
+                            <br>
+                        </footer>
+                    </blockquote>
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </div>
+        <!-- End Content -->
 
         <!-- Footer -->
-        <br><br><br><br><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <footer class="footer">
             <div class="container p-5">
                 <div class="row justify-content-between">
@@ -107,5 +158,6 @@
         </footer>
         <!-- End Footer -->
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
