--- a/side/about.html
+++ b/side/about.html
@@ -68,7 +68,7 @@
                     <p>
                         Hi
                         <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" alt="asd" width="25px">
-                        I'm Ferry Nurqadar.
+                        I'm MarmutHandsome and My real name it's Ferry Nurqadar.
                     </p>
                     <br>
                     <p>
@@ -121,14 +121,21 @@
         </div>
         <!-- End Content -->
 
+        <!-- Project -->
+
+        <!-- End Project -->
+
+        <!-- Contact -->
+
+        <!-- End Contact -->
+
         <!-- Footer -->
         <br>
         <br>
         <br>
         <br>
         <br>
-        <footer class="footer">
-            <div class="container p-5">
+            <footer class="footer"> <div class="container p-5">
                 <div class="row justify-content-between">
                     <div class="col-auto">
                         <span class="text-body-emphasis">2023 ©
