--- a/web/web.html
+++ b/web/web.html
@@ -20,11 +20,11 @@
                 <ul class="navbar-menu">
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#post">Post</a>
+                        <a href="/side/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#about">About</a>
+                        <a href="../index.html#post">Post</a>
                     </li>
                     <li class="nav-item">
                         <br>
@@ -32,11 +32,11 @@
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#skill">Skills</a>
+                        <a href="/side/about.html#project">Project</a>
                     </li>
                     <li class="nav-item">
                         <br>
-                        <a href="../index.html#contact">Contact</a>
+                        <a href="/side/about.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -61,13 +61,13 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div
-                        class="col-4"><!-- <div class="images-container">
-                                                                                                                                                                        <a href=""><img src="/assets/Jurnals/Web 1.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                                                                                                                                                                        <div class="images-text">
-                                                                                                                                                                            <p class="fw-bold">Simple CTF | TryHackMe</p>
-                                                                                                                                                                        </div>
-                                                                                                                                                                    </div> -->
+                    <div class="col-4">
+                        <div class="images-container">
+                            <a href="../web/sqlmap.html"><img src="../assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-bold">Sql Injection Using SQLMAP</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
