--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="row">
                         <div class="col-2"></div>
                         <div class="col-8">
-                            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=36&pause=1000&color=26F72B&center=true&vCenter=true&width=500&height=100&lines=FERRY+NURQADAR" alt="Typing SVG"/>
+                            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=36&pause=1000&color=26F72B&center=true&vCenter=true&width=500&height=100&lines=MARMUT+HANDSOME" alt="Typing SVG"/>
                             <p class="fs-2 fw-light">Pentester, Bounty Hunter, CTF & Red Team</p>
                         </div>
                         <div class="col-2"></div>
@@ -138,43 +138,18 @@
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="col-4"><!-- <div class="images-container">
-                                                                                                                                                                                                                                                                                                                                                                                                                                    <a href="/ios/ios.html"><img src="assets/Jurnals/IOS 1.jpg" class="shadow rounded-4 darkened-img" alt="2"></a>
-                                                                                                                                                                                                                                                                                                                                                                                                                                    <div class="images-text">
-                                                                                                                                                                                                                                                                                                                                                                                                                                        <p class="fw-bold">IOS Pentest</p>
-                                                                                                                                                                                                                                                                                                                                                                                                                                    </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                </div> -->
+                    <div class="col-4">
+                        <div class="images-container">
+                            <a href="/web/sqlmap.html"><img src="assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                            <div class="images-text">
+                                <p class="fw-bold">Sql Injection Using SQLMAP</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- End Latest Post -->
-
-        <!-- About -->
-        <br><br><br><br><br>
-        <!-- <section id="about" name="about" style="background-color: #212529;">
-                                                                                                    <div class="container">
-                                                                                                        <div class="row">
-                                                                                                            <div class="col text-center">
-                                                                                                                <h1>About Me</h1>
-                                                                                                            </div>
-                                                                                                        </div>
-                                                                                                        <br><br>
-                                                                                                        <div class="row">
-                                                                                                            <div class="col-2"></div>
-                                                                                                            <div class="col-4 text-center">
-                                                                                                                <img class="photo border border-light rounded-circle" src="assets/photo.jpeg" alt="Me">
-                                                                                                            </div>
-                                                                                                            <div class="col-4">
-                                                                                                                <p class="fs-5 fw-light">Cyber Security Student from Bina Nusantara University. Have an interest in the cyber world. Have capabilities in the field of Cyber Defense, Offensive Security, Pentesting, Digital Forensics, Kali Linux and Programming Language</p>
-                                                                                                            </div>
-                                                                                                            <div class="col-2"></div>
-                                                                                                        </div>
-                                                                                                    </div>
-                                                                                                </section>
-                                                                                                <br><br><br><br><br> -->
-        <!-- End About -->
 
         <!-- Footer -->
         <br>
@@ -182,7 +157,8 @@
         <br>
         <br>
         <br>
-            <footer class="footer"> <div class="container p-5">
+        <footer class="footer">
+            <div class="container p-5">
                 <div class="row justify-content-between">
                     <div class="col-auto">
                         <span class="text-body-emphasis">2023 ©
