--- a/ios/frida.html
+++ b/ios/frida.html
@@ -54,6 +54,7 @@
                     </div>
                     <div class="col-6 align-self-center">
                         <h1>IOS FRIDA OBJECTION PENTESTING</h1>
+                        <p class="fw-lighter">15 June 2023</p>
                         <br>
                         <a href="../ios/ios.html">
                             <button type="button" class="btn btn-outline-light">IOS Pentest</button>
