--- a/red/red.html
+++ b/red/red.html
@@ -65,6 +65,7 @@
                         <div class="images-container">
                             <a href="../red/gophish.html"><img src="/assets/Jurnals/Phishing.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
                             <div class="images-text">
+                                <p class="fw-lighter m-1">16 June 2023</p>
                                 <p class="fw-bold">Phishing Campaign Using Gophish</p>
                             </div>
                         </div>
