--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="images-container">
-                            <a href="/ios/frida.html"><img src="assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <a href="/web/sqlmap.html"><img src="assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
                             <div class="images-text">
-                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
+                                <p class="fw-lighter m-1">18 June 2023</p>
+                                <p class="fw-bold">Sql Injection Using SQLMAP</p>
                             </div>
                         </div>
                     </div>
@@ -134,15 +135,17 @@
                         <div class="images-container">
                             <a href="/red/gophish.html"><img src="assets/Jurnals/Phishing.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
                             <div class="images-text">
+                                <p class="fw-lighter m-1">16 June 2023</p>
                                 <p class="fw-bold">Phishing Campaign Using Gophish</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="images-container">
-                            <a href="/web/sqlmap.html"><img src="assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                            <a href="/ios/frida.html"><img src="assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
                             <div class="images-text">
-                                <p class="fw-bold">Sql Injection Using SQLMAP</p>
+                                <p class="fw-lighter m-1">15 June 2023</p>
+                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
                             </div>
                         </div>
                     </div>
