--- a/ios/ios.html
+++ b/ios/ios.html
@@ -65,6 +65,7 @@
                         <div class="images-container">
                             <a href="../ios/frida.html"><img src="/assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
                             <div class="images-text">
+                                <p class="fw-lighter m-1">15 June 2023</p>
                                 <p class="fw-bold">IOS Frida Objection For Pentesting</p>
                             </div>
                         </div>
