--- a/web/sqlmap.html
+++ b/web/sqlmap.html
@@ -54,6 +54,7 @@
                     </div>
                     <div class="col-6 align-self-center">
                         <h1>SQL INJECTION USING SQLMAP</h1>
+                        <p class="fw-lighter">18 June 2023</p>
                         <br>
                         <a href="../web/web.html">
                             <button type="button" class="btn btn-outline-light">Web Pentest</button>
@@ -171,7 +172,7 @@
                             <blockquote class="quote">
                                 <footer>
                                     <cite>
-                                        sqlmap -u "target_url" --batch --level 5 --risk 3
+                                        sqlmap -u "target_url" --level "1-5" --risk "1-3"
                                     </cite>
                                 </footer>
                             </blockquote>
@@ -195,6 +196,28 @@
                             </blockquote>
                             <p>
                                 Note: SQLMap will extract and display the compromised data.
+                            </p>
+                            <br><br>
+                            <h4>
+                                Retrieve Data:
+                            </h4>
+                            <ul>
+                                <li>
+                                    Once you have identified the target database, you can retrieve data from specific tables or columns.
+                                </li>
+                            </ul>
+                            <p>
+                                Use the following command to retrieve data from a table:
+                            </p>
+                            <blockquote class="quote">
+                                <footer>
+                                    <cite>
+                                        sqlmap.py -u "target URL" --dump -D "database name" -T "table name" -C "column names"
+                                    </cite>
+                                </footer>
+                            </blockquote>
+                            <p>
+                                Note: Replace "database name", "table name", and "column names" with the appropriate values. This command will extract the specified data from the target database.
                             </p>
                             <br><br>
                             <h4>
