--- a/web/web.html
+++ b/web/web.html
@@ -65,6 +65,7 @@
                         <div class="images-container">
                             <a href="../web/sqlmap.html"><img src="../assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
                             <div class="images-text">
+                                <p class="fw-lighter m-1">18 June 2023</p>
                                 <p class="fw-bold">Sql Injection Using SQLMAP</p>
                             </div>
                         </div>
