new file:   assets/Jurnals/Nmap.png 	modified:   index.html 	new file:   web/nmap.html 	modified:   web/web.html

--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="images-container">
+                            <a href="/web/nmap.html"><img src="assets/Jurnals/Nmap.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-lighter m-1">20 June 2023</p>
+                                <p class="fw-bold">How To Use NMAP For Pentesting</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="images-container">
                             <a href="/web/sqlmap.html"><img src="assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
                             <div class="images-text">
                                 <p class="fw-lighter m-1">18 June 2023</p>
@@ -137,15 +146,6 @@
                             <div class="images-text">
                                 <p class="fw-lighter m-1">16 June 2023</p>
                                 <p class="fw-bold">Phishing Campaign Using Gophish</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="images-container">
-                            <a href="/ios/frida.html"><img src="assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-lighter m-1">15 June 2023</p>
-                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
                             </div>
                         </div>
                     </div>
