--- a/web/web.html
+++ b/web/web.html
@@ -63,6 +63,15 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="images-container">
+                            <a href="../web/nmap.html"><img src="../assets/Jurnals/Nmap.png" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-lighter m-1">20 June 2023</p>
+                                <p class="fw-bold">How to Use Nmap for Pentesting</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="images-container">
                             <a href="../web/sqlmap.html"><img src="../assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
                             <div class="images-text">
                                 <p class="fw-lighter m-1">18 June 2023</p>
