--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="/assets/Jurnals/Icon.ico" type="image/x-icon">
         <title>Marmut Handsome</title>
         <style>
             .navbar {
@@ -125,28 +124,28 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="images-container">
-                            <a href="../web/dirsearch.html"><img src="../assets/Jurnals/Dirsearch.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-lighter m-1">22 June 2023</p>
-                                <p class="fw-bold">Dirsearch For Path Enumeration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="images-container">
-                            <a href="/web/nmap.html"><img src="assets/Jurnals/Nmap.png" class="shadow rounded-4 darkened-img" alt="1"></a>
-                            <div class="images-text">
-                                <p class="fw-lighter m-1">20 June 2023</p>
-                                <p class="fw-bold">How To Use NMAP For Pentesting</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="images-container">
                             <a href="/web/sqlmap.html"><img src="assets/Jurnals/Sqlmap.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
                             <div class="images-text">
                                 <p class="fw-lighter m-1">18 June 2023</p>
                                 <p class="fw-bold">Sql Injection Using SQLMAP</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="images-container">
+                            <a href="/red/gophish.html"><img src="assets/Jurnals/Phishing.jpeg" class="shadow rounded-4 darkened-img" alt="2"></a>
+                            <div class="images-text">
+                                <p class="fw-lighter m-1">16 June 2023</p>
+                                <p class="fw-bold">Phishing Campaign Using Gophish</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="images-container">
+                            <a href="/ios/frida.html"><img src="assets/Jurnals/Frida.jpeg" class="shadow rounded-4 darkened-img" alt="1"></a>
+                            <div class="images-text">
+                                <p class="fw-lighter m-1">15 June 2023</p>
+                                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
                             </div>
                         </div>
                     </div>
