--- a/web/top10.html
+++ b/web/top10.html
@@ -53,7 +53,7 @@
         <div class="row">
           <div class="col-6 col-t-12 text-center">
             <img
-              src="../assets/Jurnals/Dirsearch.png"
+              src="../assets/Jurnals/top10.jpg"
               width="500"
               height="500"
               alt="simplectf"
