--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -7,11 +7,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../java.js" />
     <link
       rel="shortcut icon"
       href="/assets/Jurnals/favicon.png"
       type="image/x-icon" />
-    <title>About</title>
+    <title>Marmut Handsome</title>
     <style>
       .navbar {
         background-color: transparent;
@@ -48,96 +49,59 @@
     </nav>
     <!-- End Navbar -->
 
-    <!-- Home -->
-    <div id="Home" name="Home">
-      <div class="image-container">
-        <img src="../assets/Jurnals/About.jpeg" alt="Image" width="2000" />
-        <div class="image-text">
-          <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-              <h1 class="fw-bold text-center">About</h1>
-            </div>
-            <div class="col-2"></div>
+    <!-- Title -->
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="fw-bold text-center">Mobile Pentesting</h1>
           </div>
         </div>
       </div>
-    </div>
-    <!-- End Home -->
+    </section>
+    <!-- End Title -->
 
-    <!-- Content -->
-    <br /><br /><br />
-    <div class="container">
-      <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-          <p>
-            Hi
-            <img
-              src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif"
-              alt="asd"
-              width="25px" />
-            I'm MarmutHandsome and My real name it's Ferry Nurqadar.
-          </p>
-          <br />
-          <p>
-            I am a Web Pentester, IOS Pentester, Bug Hunter, Red Team and Web
-            Developer (Front-End).
-          </p>
-          <br />
-          <p>
-            I am a Cyber Security student at Bina Nusantara University with a
-            strong passion for the cyber world. My expertise lies in Offensive
-            Security, Pentester, Cyber Defense, Digital Forensics, Kali Linux,
-            and various Programming Languages. I am constantly seeking
-            opportunities to enhance my knowledge and skills in these areas. My
-            goal is to contribute to the field of cybersecurity and make a
-            positive impact in protecting digital assets and ensuring online
-            safety.
-          </p>
-          <br />
-          <p>
-            If you have any other questions please feel free to contact me
-            <a href="https://id.linkedin.com/in/ferry-nurqadar-237646172"
-              >@ferry</a
-            >.
-          </p>
-          <blockquote class="quote">
-            <footer>
-              <cite class="pe-3"> Job: </cite>
-              <cite> 🗡 Pentester and 🔴 Red Team. </cite>
-              <br />
-              <cite class="pe-3"> Pronouns: </cite>
-              <cite> 👨 He/Him. </cite>
-              <br />
-              <cite class="pe-3"> Special Move: </cite>
-              <cite> 💻 Web Hacking and 📱 IOS Hacking. </cite>
-              <br />
-              <cite class="pe-3"> Language: </cite>
-              <cite> Shell Scripting and HTML. </cite>
-              <br />
-            </footer>
-          </blockquote>
+    <!-- Post -->
+    <br /><br /><br /><br /><br />
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="images-container">
+              <a href="../mobile/bypassing.html"
+                ><img
+                  src="/assets/Jurnals/Sileo Frida.jpeg"
+                  class="shadow rounded-4 darkened-img"
+                  alt="1"
+              /></a>
+              <div class="images-text">
+                <p class="fw-lighter m-1">3 October 2023</p>
+                <p class="fw-bold">Bypassing Jailbreak And SSL</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="images-container">
+              <a href="../mobile/frida.html"
+                ><img
+                  src="/assets/Jurnals/Frida.jpeg"
+                  class="shadow rounded-4 darkened-img"
+                  alt="1"
+              /></a>
+              <div class="images-text">
+                <p class="fw-lighter m-1">15 June 2023</p>
+                <p class="fw-bold">IOS Frida Objection For Pentesting</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-3"></div>
       </div>
-    </div>
-    <!-- End Content -->
-
-    <!-- Project -->
-
-    <!-- End Project -->
-
-    <!-- Contact -->
-
-    <!-- End Contact -->
+    </section>
+    <!-- End Post -->
 
     <!-- Footer -->
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <br /><br /><br /><br /><br />
     <footer class="footer">
       <div class="container p-5">
         <div class="row justify-content-between">
@@ -194,7 +158,5 @@
       <br />
     </footer>
     <!-- End Footer -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
