--- a/web/top10.html
+++ b/web/top10.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../java.js" />
+    <link
+      rel="shortcut icon"
+      href="/assets/Jurnals/favicon.png"
+      type="image/x-icon" />
     <title>TOP 10 OWASP</title>
     <style>
       .navbar {
